# Financing-Report-Agent

./: docker-compose.yml  neo4j1.ipynb  neo4j_save.ipynb  prometheus.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: celery_app.py  db.py  main.py  metrics.py  tools.py  utils.py
backend/app/agents/: critic.py  graph_reasoner.py  researcher.py  writer.py
backend/app/graph/: builder.py  state.py
backend/app/routers/: research.py
frontend/: gradio_app.py
grafana/: dashboard.json
